fixed flexbox inside button, wrapped into div

--- a/scss/modules/_template-list.scss
+++ b/scss/modules/_template-list.scss
@@ -30,6 +30,10 @@
             margin-left: 0.2em;
             display: inline-flex;
             align-items: center;
+            .button-content {
+                display: inline-flex;
+                align-items: center;
+            }
             .sprite {
                 @include svg-size(1.05em);
                 display: inline-flex;
